fixtures/frontend/milestone-2/invalid/truthy-falsy-noncanonical-subject/main.aivi
type User = {
    name: Text
}

value user:User = { name: "Ada" }

value message:Text =
    user
     T|> .name
     F|> "guest"
